@@ -76,6 +76,11 @@ int get_options(udefrag_job_parameters *jp)
         buf[sizeof(buf) - 1] = 0;
         jp->udo.size_limit = winx_hr_to_bytes(buf);
     }
+    if(winx_query_env_variable(L"UD_OPTIMIZER_SIZELIMIT",buffer,ENV_BUFFER_SIZE) >= 0){
+        (void)_snprintf(buf,sizeof(buf) - 1,"%ws",buffer);
+        buf[sizeof(buf) - 1] = 0;
+        jp->udo.optimizer_size_limit = winx_hr_to_bytes(buf);
+    }
 
     /* set file fragments threshold */
     if(winx_query_env_variable(L"UD_FRAGMENTS_THRESHOLD",buffer,ENV_BUFFER_SIZE) >= 0)
@@ -128,7 +133,8 @@ int get_options(udefrag_job_parameters *jp)
         for(i = 0; i < jp->udo.ex_filter.count; i++)
             DebugPrint("  - %ws",jp->udo.ex_filter.array[i]);
     }
-    DebugPrint("file size threshold = %I64u",jp->udo.size_limit);
+    DebugPrint("file size threshold (for defragmentation) = %I64u",jp->udo.size_limit);
+    DebugPrint("file size threshold (for optimization)    = %I64u",jp->udo.optimizer_size_limit);
     DebugPrint("fragment size threshold = %I64u",jp->udo.fragment_size_threshold);
     DebugPrint("file fragments threshold = %I64u",jp->udo.fragments_limit);
     DebugPrint("time limit = %I64u seconds",jp->udo.time_limit);
